fixing many issues and currently working 80% fine